--- a/missingkids/less/hero.less
+++ b/missingkids/less/hero.less
@@ -257,6 +257,7 @@
             left: 0;
           }
           &.center {
+            left: auto;
             .hero-content{
               left: 0;
               transform: none;
